@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - fix Role::ObjectMethods abstract and list_$object documentation
 
 0.001001  2019-04-12 13:44:14+02:00 Europe/Vienna
     - Initial release using the JSON REST API version 1
